--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -12,10 +12,10 @@
           <h1>{{item.name}}</h1>
           
           <p>{{item.description}}</p>
-          
-          
 
-      </ion-item>
+          <p>{{item.direction}}</p>
+
+        </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
