--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,10 +3,17 @@
   <ion-tab title="home" icon="ion-home"
   href="#/tab/home">
   <ion-nav-view name="home-tab"></ion-nav-view>
-
+ </ion-tab>
+  
   <ion-tab title="Runs" icon="ion-model-s"
   href="#/tab/list">
   <ion-nav-view name="list-tab"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="Calendar" icon="ion-calendar"
+  href="#/tab/calendar">
+  <ion-nav-view name="list-calendar"></ion-nav-view>
+  </ion-tab>
 
 
 
