--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -5,7 +5,7 @@
 <ion-view>
   <ion-content>
     <ion-list class="list-inset">
-      <ion-item Class="item-text-wrap"
+      <ion-item class="item-text-wrap"
           ng-repeat="item in runs | filter: {id: whichrun}">
 
           <img ng-src="{{item.imageUrl}}" alt="{{item.name}}">     
@@ -15,8 +15,31 @@
 
           <p>{{item.direction}}</p>
 
-        </ion-item>
+       
+       <ul class="poi-links">
+     
+       <li ng-repeat="img in item.images">
+       <img ng-src="{{img}}" ng-click="setImage(img)">
+       </li>
+      </ul> 
+
+
+       </ion-item>
+
+
+    
+    
+
     </ion-list>
+     
   </ion-content>
 </ion-view>
 
+<!-- <ion-item ng="item-avatar:item.name"
+
+ng-repeat="img in item.images">
+>
+<img ng-src="{{img}}" ng-click="setImage(img)">
+
+</ion-item>
+        -->
