--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,4 +1,4 @@
- 
+<ion-view view-title="320 Runs"> 
 <ion-header-bar ng-controller="ListController"  class="bar-positive">
       <h1 class="title">London Taxi Routes</h1>      
 </ion-header-bar>
@@ -54,5 +54,6 @@
     </ion-item>
   </ion-list> 
 </ion-content>
+</ion-view>
 
   
