--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,7 +12,7 @@
 
   <ion-tab title="Calendar" icon="ion-calendar"
   href="#/tab/calendar">
-  <ion-nav-view name="list-calendar"></ion-nav-view>
+  <ion-nav-view name="calendar-tab"></ion-nav-view>
   </ion-tab>
 
 
